@@ -1,7 +1,7 @@
 /***************************************************************************/
 /*                                                                         */
 /*                                 main.h                                  */
-/* Original code written by Daniel Hawkins. Last modified on 2013-12-03.   */
+/* Original code written by Daniel Hawkins. Last modified on 2014-05-22.   */
 /*                                                                         */
 /* The file defines several searching functions' prototypes.               */
 /*                                                                         */
@@ -10,7 +10,7 @@
 #ifndef MAIN_H
 #define MAIN_H
 
-int findIn(const char *, const char *);
-int searchFolder(const char *, const char *);
+int findIn(const char *);
+int searchFolder(const char *);
 
 #endif
